--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ img {
 
 .featured {
     color: white;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.31), rgba(0, 0, 0, 0.31)), url("images/article-img-featured.jpeg");
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.31), rgba(0, 0, 0, 0.31)), url('./images/article-img-featured.jpeg');
     background-size: 100%;
     background-position: bottom;
     padding: 10em 1em 1em 1em;
